{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player_1",
            "id": "ee1c22e1-592b-4cc0-bd22-f2c3104eaacc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "fb289e2b-bdc3-4869-9c4a-8adffcb2d789",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b72efa39-ccb2-4fcc-a118-e1858cd615bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PushGlove",
                    "type": "Button",
                    "id": "3bfb60f5-9615-44ed-a44c-bfd09ed24f27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PullGlove",
                    "type": "Button",
                    "id": "658d24b6-7d8c-414f-abf8-3357d56c2435",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "DIrection",
                    "id": "3718b34f-e8a6-464e-a427-4d57af7ad513",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "4c792274-0732-48fb-90c2-1918cbad0a17",
                    "path": "<Keyboard>/#(A)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e288b301-f4ab-4806-ad43-0264c32daea3",
                    "path": "<Keyboard>/#(D)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c3cddc42-cd4e-48f8-9cd8-9f510a8ee208",
                    "path": "<Keyboard>/#(W)",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "016b8136-9a06-418e-881a-f535bf6a16f7",
                    "path": "<Keyboard>/#(E)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PushGlove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f58b16f-1c14-4bb9-aa62-170cbbb29c54",
                    "path": "<Keyboard>/#(R)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullGlove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player_2",
            "id": "71faca82-a399-4719-bc6d-8cae856ee3f4",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7a7d79eb-3b89-42b2-adcd-1d0763097ad3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f787eef1-b7fa-4385-8bd0-a57e3c1308c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PushGlove",
                    "type": "Button",
                    "id": "b7155cc0-e24f-4b65-a632-432c963e1cee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PullGlove",
                    "type": "Button",
                    "id": "a6c7936a-df20-4d19-a946-96efd64a72e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Direction",
                    "id": "c88ceb34-0423-46e6-8e7a-87a048aea4a3",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "7f6b89fa-f16f-45aa-9029-1693687f361c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "47287f14-5e3f-4b67-9251-7de9652dd77f",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c5549760-7e53-4349-85cf-16f1f7e355c7",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c36af23a-2e19-47f5-864d-2e7281e979a9",
                    "path": "<Keyboard>/#(/)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PushGlove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bce6f7c2-1c40-44b1-b36b-cb3a8951e280",
                    "path": "<Keyboard>/#(.)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PullGlove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}